# dots

./: README.md
2022.05.22.sway_plain/: README.md  notes  waybar_patch
2022.05.22.sway_plain/alacritty/: alacritty.yml
2022.05.22.sway_plain/sway/: config
2022.05.22.sway_plain/waybar/: config  style.css  thermals.sh
2022.07.02.i3gaps_blueprint/: README.md  Xmodmap  Xresources  i3-config  notes  picom.conf  pm  polybar-config
2022.07.02.i3gaps_blueprint/i3-gaps/src/: con.c  render.c  x.c
2022.07.02.i3gaps_blueprint/polybar-3.5.5/: CMakeLists.txt
2022.07.02.i3gaps_blueprint/polybar-3.5.5/.pc/: applied-patches
2022.07.02.i3gaps_blueprint/polybar-3.5.5/debian/: changelog  clean  control  copyright  polybar.install  rules  watch
2022.07.02.i3gaps_blueprint/polybar-3.5.5/debian/patches/: disable_config_generation.patch  dont_build_html_doc.patch  my_border.patch  my_filesize.patch  redact_build_flags.patch
2022.07.02.i3gaps_blueprint/polybar-3.5.5/debian/upstream/: metadata
2022.07.02.i3gaps_blueprint/polybar-3.5.5/doc/: CMakeLists.txt
2022.07.02.i3gaps_blueprint/polybar-3.5.5/include/cairo/: context.hpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/i3ipcpp/: CMakeLists.txt  LICENSE
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/i3ipcpp/include/i3ipc++/: ipc.hpp  log.hpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/i3ipcpp/src/: ipc-util.cpp  ipc.cpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/: .gitignore  CMakeLists.txt  LICENSE  README.md
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/cmake/: FindXCB.cmake
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/generators/: TODO  accessor.py  cpp_client.py  cppcookie.py  cpperror.py  cppevent.py  cppreply.py  cpprequest.py  extensionclass.py  interfaceclass.py  objectclass.py  parameter.py  resource_classes.py  utils.py
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/include/xpp/: atom.hpp  colormap.hpp  connection.hpp  core.hpp  cursor.hpp  drawable.hpp  event.hpp  flags.makefile  font.hpp  fontable.hpp  gcontext.hpp  generic.hpp  pixmap.hpp  valueparam.hpp  window.hpp  xpp.hpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/include/xpp/generic/: error.hpp  event.hpp  extension.hpp  factory.hpp  input_iterator_adapter.hpp  iterator_traits.hpp  reply_iterator.hpp  request.hpp  resource.hpp  signature.hpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/src/: xpp.cpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/src/examples/: Makefile  demo_01.cpp  demo_02.cpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/lib/xpp/src/tests/: .gitignore  Makefile  README.md  callable.cpp  error_test.cpp  event.cpp  iterator.cpp  requests.cpp  resource.cpp  sizeof.cpp  template.cpp  test.cpp  xlib-test.cpp  xlib.cpp  xproto.cpp
2022.07.02.i3gaps_blueprint/polybar-3.5.5/src/: settings.cpp.cmake
2022.07.02.i3gaps_blueprint/polybar-3.5.5/src/utils/: string.cpp
